[tool.poetry]
version = "3.3.3"
name = "mango-explorer"
homepage = "https://mango.markets"
repository = "https://github.com/blockworks-foundation/mango-explorer"
description = "Python integration for https://mango.markets"
authors = ["Geoff Taylor <geoff@mango.markets>"]
license = "MIT"
readme = "README.md"
documentation = "https://mybinder.org/v2/gh/blockworks-foundation/mango-explorer-examples/HEAD"
include = ["bin/*", "data/*", "data/.version"]
packages = [
    { include = "mango" }
]

[tool.poetry.dependencies]
jsons = "^1.6.1"
numpy = "^1.22.1"
pandas = "^1.3.4"
python = ">=3.9,<3.11"
pyserum = "^0.5.0a0"
python-dateutil = "^2.8.2"
requests = "^2.27.1"
Rx = "^3.2.0"
rxpy-backpressure = "^1.0.0"
solana = "^0.21.0"
websocket-client = "^1.2.1"
zstandard = "^0.16.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^4.0.1"
ipykernel = "^6.7.0"
Jinja2 = "^3.0.3"
mypy = "^0.931"
pandas-stubs = "^1.2.0.43"
pytest = "^6.2.5"
types-cachetools = "^4.2.9"
types-certifi = "^2021.10.8.1"
types-requests = "^2.27.7"
types-setuptools = "^57.4.7"
types-toml = "^0.10.3"
types-python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
