[tool.poetry]
version = "3.4.6"
name = "mango-explorer"
homepage = "https://mango.markets"
repository = "https://github.com/blockworks-foundation/mango-explorer"
description = "Python integration for https://mango.markets"
authors = ["Geoff Taylor <geoff@mango.markets>"]
license = "MIT"
readme = "README.md"
documentation = "https://mybinder.org/v2/gh/blockworks-foundation/mango-explorer-examples/HEAD"
include = ["bin/*", "data/*", "data/.version"]
packages = [
    { include = "mango" }
]

[tool.poetry.dependencies]
jsons = "^1.6.1"
numpy = "^1.22.1"
pandas = "^1.4.1"
python = ">=3.9,<3.11"
pyserum = "^0.5.0a0"
python-dateutil = "^2.8.2"
requests = "^2.27.1"
Rx = "^3.2.0"
rxpy-backpressure = "^1.0.0"
solana = "^0.21.0"
websocket-client = "^1.2.1"
zstandard = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
pandas-stubs = "^1.2.0.47"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
types-cachetools = "^4.2.9"
types-certifi = "^2021.10.8.1"
types-requests = "^2.27.8"
types-setuptools = "^57.4.7"
types-toml = "^0.10.3"
types-python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
